Modify the data paths

--- a/notebooks/pp_active_touch.ipynb
+++ b/notebooks/pp_active_touch.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "# Miniproject - Neuroscience: cellular and circuit mechanisms (BIO-482)\n",
     "\n",
-    "- This notebook contains the part 4 of the miniproject - the personal project.\n",
+    "This notebook contains the part 4 of the miniproject - the personal project. In this part we investigate the **classification among all cell types for active touch.**\n",
+    "\n",
     "\n",
     "#### Importing libraries"
    ]
@@ -179,7 +180,7 @@
    ],
    "source": [
     "# Load the first dataset\n",
-    "df_1 = pd.read_csv('df_1_act.csv')\n",
+    "df_1 = pd.read_csv('../data/df_1_act.csv')\n",
     "df_1.head(3)"
    ]
   },
@@ -315,7 +316,7 @@
    ],
    "source": [
     "# Load the second dataset\n",
-    "df_2 = pd.read_csv('df_2_act.csv')\n",
+    "df_2 = pd.read_csv('../data/df_2_act.csv')\n",
     "df_2.head(3)"
    ]
   },
@@ -702,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +712,7 @@
        "(134, 15)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -786,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -846,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
