--- a/notebooks/pp_free_whisking.ipynb
+++ b/notebooks/pp_free_whisking.ipynb
@@ -8,14 +8,16 @@
    "source": [
     "# Miniproject - Neuroscience: cellular and circuit mechanisms (BIO-482)\n",
     "\n",
-    "- This notebook contains the part 4 of the miniproject - the personal project.\n",
+    "This notebook contains the part 4 of the miniproject - the personal project. In this part we investigate the **classification among all cell types for free whisking.**\n",
+    "\n",
+    "\n",
     "\n",
     "#### Importing libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -54,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -78,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -172,20 +174,20 @@
        "2 -0.058273  0.006374  0.000775  0.000053  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Load the first dataset\n",
-    "df_1 = pd.read_csv('df_1_free.csv')\n",
+    "df_1 = pd.read_csv('../data/df_1_free.csv')\n",
     "df_1.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -308,20 +310,20 @@
        "2  [27.5 20.  17.5 32.5 32.5 15.   2.5 10.  12.5 ...  24.381095    7.501875  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Load the second dataset\n",
-    "df_2 = pd.read_csv('df_2_free.csv')\n",
+    "df_2 = pd.read_csv('../data/df_2_free.csv')\n",
     "df_2.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +475,7 @@
        "2  [27.5 20.  17.5 32.5 32.5 15.   2.5 10.  12.5 ...  24.381095    7.501875  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
