--- a/notebooks/test_active_touch.ipynb
+++ b/notebooks/test_active_touch.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Miniproject - Neuroscience: cellular and circuit mechanisms (BIO-482)\n",
+    "\n",
+    "This notebook contains the part 4 of the miniproject - the personal project. In this part we investigate the **classification between excitatory and inhibitory cells and the classification within inhibitory cell types in active touch.**\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Importing libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -137,7 +150,7 @@
    ],
    "source": [
     "# Load the first dataset\n",
-    "df_1 = pd.read_csv('df_1_act.csv')\n",
+    "df_1 = pd.read_csv('../data/df_1_act.csv')\n",
     "df_1.head(3)"
    ]
   },
@@ -273,7 +286,7 @@
    ],
    "source": [
     "# Load the second dataset\n",
-    "df_2 = pd.read_csv('df_2_act.csv')\n",
+    "df_2 = pd.read_csv('../data/df_2_act.csv')\n",
     "df_2.head(3)"
    ]
   },
@@ -852,7 +865,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bio482",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -870,5 +883,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
