--- a/notebooks/test_free_whisking.ipynb
+++ b/notebooks/test_free_whisking.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Miniproject - Neuroscience: cellular and circuit mechanisms (BIO-482)\n",
+    "\n",
+    "This notebook contains the part 4 of the miniproject - the personal project. In this part we investigate the **classification between excitatory and inhibitory cells and the classification within inhibitory cell types in free whisking.**\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Importing libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -38,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -130,20 +143,20 @@
        "2 -0.058273  0.006374  0.000775  0.000053  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Load the first dataset\n",
-    "df_1 = pd.read_csv('df_1_free.csv')\n",
+    "df_1 = pd.read_csv('../data/df_1_free.csv')\n",
     "df_1.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -266,14 +279,14 @@
        "2  [27.5 20.  17.5 32.5 32.5 15.   2.5 10.  12.5 ...  24.381095    7.501875  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Load the second dataset\n",
-    "df_2 = pd.read_csv('df_2_free.csv')\n",
+    "df_2 = pd.read_csv('../data/df_2_free.csv')\n",
     "df_2.head(3)"
    ]
   },
@@ -838,7 +851,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bio482",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -856,5 +869,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
